[package]
name = "bevyworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "bevyworld_lib"
src = "src/lib.rs"
[[bin]]
name = "bevyworld"
path = "src/main.rs"

[dependencies]
bevy = {version = "0.13.0", features = ["dynamic_linking"] }
bevy_egui = "0.25.0"

mapgen = "0.6.0"
#bracket-noise = "0.8.7"
simdnoise = "3.1.6"
matrix = "0.22"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package.'*']
opt-level = 3
