[package]
name = "bevyworld"
version = "0.1.0"
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "bevyworld_lib"
src = "src/lib.rs"
[[bin]]
name = "bevyworld"
path = "src/main.rs"

[dependencies]
bevy = {version = "0.13.0" }
bevy_egui = "0.25.0"

mapgen = "0.6.0"
#bracket-noise = "0.8.7"
#simdnoise = "3.1.6"
matrix = "0.22"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package.'*']
opt-level = 3

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
dev = [
    "bevy/dynamic_linking",
]

[build-dependencies]
embed-resource = "1"